# zombies_gold

./: Cargo.toml  LICENSE-MIT
.cargo/: config.toml
src/: actions.rs  main.rs  player.rs  setup.rs
src/items/: materials.rs
src/map/: map.rs
src/physics/: physics.rs
