[package]
name = "zombies_gold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Remove "dynamic" after any releases or include libbevy_dylib
bevy = { version = "0.7.0", features = ["dynamic", "bevy_winit", "render", "png", "x11"] }
#bevy = { version = "0.7.0" }
heron = { version = "3.0.0", features = ["3d", "collision-from-mesh"] }

leafwing-input-manager = "0.3.0"
iyes_loopless = "0.5.1"

block-mesh = "0.2.0"
grid-tree = "0.1.0"

ndshape = "0.3.0"
ndcopy = "0.3.0"